--- a/src/index.css
+++ b/src/index.css
@@ -22,6 +22,25 @@ p, span, h5{
 
 }
 
+
+.box-home-vend{
+
+  @apply w-52 m-2 shadow hover:shadow-lg cursor-pointer rounded-lg text-xl font-bold text-center 
+  flex flex-col items-center p-5 dark:border-indigo-300 dark:text-slate-300 text-gray-500 
+
+}
+
+.text-secondary-home{
+  @apply text-gray-400
+
+}
+
+.box-ventas-dia{
+  @apply shadow hover:shadow-xl flex h-24 gap-2 rounded-lg cursor-pointer
+}
+
+
+
 /* Firefox */
 * {
   scrollbar-width: thin;
@@ -43,3 +62,5 @@ p, span, h5{
   border-radius: 14px;
   border: 3px solid var(--primary);
 }
+
+
