--- a/src/index.css
+++ b/src/index.css
@@ -9,11 +9,11 @@
 
 
 h1{
-    @apply font-title
+    /* @apply font-title */
 }
 
 p, span, h5{
-    @apply font-content
+    /* @apply font-content */
 }
 
 .numbers{
